# arm_linux_cross_compile

./: README.md  arm_linux.cmake
doc/: 交叉编译.docx
project/ini-file-project/: CMakeLists.txt  README.md
project/ini-file-project/src/: ini_reader_writer.cpp  ini_reader_writer.h  main.cpp
